Fix video width not aligning with products width

--- a/ecommerceapp/src/Home.css
+++ b/ecommerceapp/src/Home.css
@@ -4,7 +4,6 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
-  position: relative; /* Add this to position children */
 }
 
 .home__video {
@@ -17,15 +16,11 @@
 .home__row--gradient {
   display: flex; 
   z-index: 1; 
-  margin-left: 10px;  
-  margin-right: 10px;
   height: 25%;
-  background: linear-gradient(to bottom, rgba(45, 45, 45, 1), rgba(0, 0, 0, 0)); /* Adjusted gradient for smoother blend */
+  background: linear-gradient(to bottom, rgba(45, 45, 45, 1), rgba(0, 0, 0, 0)); 
 }
 
 .home__row {  
   display: flex; 
   z-index: 1; 
-  margin-left: 5px;  
-  margin-right: 5px;
 }
